# Logo-Maker

./: CMakeLists.txt  GUIComponent.cpp  GUIComponent.h  README.md  color.cpp  color.h  colorPicker.cpp  colorPicker.h  cursor.cpp  cursor.h  dropdownMenu.cpp  dropdownMenu.h  eventHandler.cpp  eventHandler.h  fileItem.cpp  fileItem.h  fileNode.cpp  fileNode.h  fileSelect.cpp  fileSelect.h  fileTree.cpp  fileTree.h  font.cpp  font.h  history.cpp  history.h  image.cpp  image.h  item.cpp  item.h  itemList.cpp  itemList.h  keyboardShortcut.cpp  keyboardShortcut.h  label.cpp  label.h  logoDisplay.cpp  logoDisplay.h  logoMaker.cpp  logoMaker.h  (+25 more)
data/: logo.txt
